--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -692,6 +692,8 @@ input {
     color: grey;
     font-weight: bold;
 }
+
+
     
 .dmLowOptions {
     display: flex;
@@ -701,9 +703,15 @@ input {
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 90%;
+    width: 96.6%;
     margin-top: 2%;
+    box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.3);
+    z-index: 99;
+    background-color: #e0d8b2;
+    border-radius: 10px 10px 0px 0px;
+    padding: 10px 0px 0px 10px;
 }
+
 .encounterControls {
  display: flex;
 }
@@ -925,19 +933,13 @@ input {
     height: 12px; /* Height of the horizontal scrollbar */
 }
 
-::-webkit-scrollbar-track {
-    border-radius: 2px; /* Round the track */
-}
-
 ::-webkit-scrollbar-thumb {
     background: #88888831; /* Color of the scrollbar */
-    border-radius: 4px; /* Round the scrollbar */
 }
 
 .column:hover 
 ::-webkit-scrollbar-thumb {
     background: #888888cd; /* Color of the scrollbar */
-    border-radius: 4px; /* Round the scrollbar */
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -1063,17 +1065,20 @@ input {
 }
 
 .listItem {
+    width: 100%;
     margin-bottom: 1%;
     border-radius: 20px;
-    box-shadow: 2px 2px 10px #434343;
-
+    box-shadow: inset 0px 0px 6px 0px #434343;
+    background-color: #cfc9a8;
 
 }
-  
+
+.encounterCreatureLeftContainer,
 .searchListCreatureContainer,
 .encounterCreatureContainer {
+    height: 50px;
     display: flex;
-    background-color: #e0d9b7;
+    width: 100%;
 }
 
 .searchListCreatureContainer {
@@ -1113,25 +1118,51 @@ input {
 .listItemMiddleStats {
     display: flex;
     flex-direction: column;
+    width: 100%;
+}
+
+.nameInputContainer {
+    width: fit-content;
 }
 
 .nameInput {
+    width: 100%;
     position: relative;
-    width: 80%;
-    margin: 0px;
-    padding: none;
     font-family: 'Bitter', serif;
     font-weight: bold;
     font-size: .8em;
     background-color: inherit;
     color: inherit;
     border: none;
+    margin: 0;
     border-bottom: 2px dotted #919191;
 }
 
-.initiativeInputContainer {
+.titleInput {
+    width: 90%;
+}
+
+.middleStatsInput {
     position: relative;
-    width: 15%;
+    min-width: 20px;
+    max-width: 25px;
+    text-align: center;
+    margin: 0px;
+    padding: none;
+    font-family: 'Bitter', serif;
+    font-weight: bold;
+    font-size: 1em;
+    background-color: inherit;
+    color: inherit;
+    border: none;
+    border-bottom: 1px dotted #919191;
+}
+
+.initiativeInputContainer {
+    height: auto;
+    position: relative;
+    min-width: 22px;
+    max-width: 30px;
 }
 
 .inputButton {
@@ -1145,14 +1176,13 @@ input {
     border-radius: 3px;
 }
 
-.middleStatsInput {
-    margin: 0px;
-    margin-left: 5px;
-    width: 20%;
-    text-align: center;
+.middleStatsLabel {
+   font-size: 10px;
 }
 
-.armorClassContainer {
+
+
+.middleStatsContainer {
     position: relative;
     display: flex;
     width: 90%;
@@ -1186,7 +1216,6 @@ input {
     display: flex;
     flex-direction: column;
     list-style-type: none;
-    margin-top: 3%; 
     margin-bottom: 8%; 
     overflow-y: scroll;
     height: 100%;
@@ -1214,8 +1243,6 @@ input {
     width: 16px;
     border-bottom: inherit;
     border-left: inherit;
-    border-radius: 5px;
-
 }
 
 .hpChanges {
@@ -1311,38 +1338,44 @@ input {
 
 .monsterEncounterIconContainer {
     position: relative;
-    height: 50px;
-    width: 100px;
+    min-height: 50px;
+    --v-width: 50px;
+    min-width: var(--v-width); /* Set width */
     background-color: #000000;
     margin: 0px 5px 0px 5px;
 }
 
-.monsterEncounterIconContainer:hover .uploadIconContainer {
+.monsterEncounterIconContainer:hover .uploadIconContainer,
+.monsterEncounterIconContainer:hover .uploadIcon {
     opacity: 1;
 }
 
 .uploadIconContainer,
 .monsterEncounterIcon {
     position: absolute;
-    width: 100%;
     height: 100%;
+    width: 100%;
 }
 
 .uploadIconContainer {
-    opacity: 0;
     background-color: #ffffff4d;
+    opacity: 0;
+
 }
 
 .uploadIcon {
+    opacity: 0;
     position: relative;
-    left: calc(50% - 10px);
+    left: 25%;
     top: calc(25%);
-    width: 25px;
+    width: calc(var(--v-width) - 50%); /* Subtracts 50% of the inherited value */
 }
 
 .encounterCreaturesHpContainer {
     position: relative;
-    min-width: 20%;
+    width: 100%;
+    min-width: 60px;
+    max-width: 65px;
     text-align: center;
 }
   
