--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -1270,15 +1270,17 @@ input {
 }
 
 .editTeamContainer {
+    display: flex;
+    flex-direction: column;
     position: fixed;
-    border-radius: 5px;
+    border-radius: 10px;
     border: 1px solid #000000;
     background-color: #e0d9b7;
     box-shadow: 1px 1px 10px #000000;
-    width: 13%;
-
+    width: 20%;
     z-index: 9999;
     padding: 5px;
+    align-items: center
 }
 
 
@@ -1318,7 +1320,7 @@ input {
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: baseline
+    justify-content: space-evenly;
 }
 
 .editHpContainer {
