--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -190,6 +190,17 @@ hr {
     color: rgb(97, 191, 191);
 }
 
+@keyframes shadowPulse {
+    0%, 100% {
+      box-shadow: 0 0 5px 2px rgbargb(142, 242, 255, .5);
+    }
+    50% {
+      box-shadow: 0 0 8px 3px rgb(142, 242, 255);
+    }
+}
+
+
+
 .options-container {
     display: flex;
     padding: 10px; 
@@ -209,6 +220,10 @@ hr {
     margin: 0px
 }
 
+.option-no-bot-margin {
+    margin-bottom: 0px
+}
+
 .option-no-radius {
     border-radius: 0px;
 }
@@ -224,13 +239,21 @@ hr {
     border-radius: 10px;
 }
 
+.timerControls {
+    display: flex;
+    flex-direction: row;
+    background-color: rgba(140, 140, 114, 0.645);
+    border-radius: 5px;
+    height: 90%;
+    padding-right: 3px;
+}
+
 .timer {
     position: relative;
     width: fit-content;
     font-size: 20px;
-    bottom: 2px;
-    left: -5px;
-
+    margin-top: 3px;
+    margin-left: 3px;
 }
 
 .refresh-container {
@@ -306,12 +329,16 @@ hr {
     font-size: xx-large;
 }
 
-
 .effectsBarContainer {
-    position: absolute;
-    bottom: 15%;
-    left: 50%;
-    transform: translate(-50%, 50%);
+    position: fixed;
+    border-radius: 5px;
+    border: 1px solid #000000;
+    background-color: #e0d9b7;
+    box-shadow: 1px 1px 10px #000000;
+    width: fit-content;
+    z-index: 9999;
+    padding: 5px;
+    /* transform: translate(-50%, 50%); */
 }
 
 .effectsBarPlayerAvatar {
@@ -1103,6 +1130,21 @@ input {
 
 .listItemOptions {
     box-shadow: none;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* 2 columns */
+    grid-gap: 1px; /* gap between items */
+}
+
+.effectsCounter {
+    position: absolute;
+    bottom: 0px;
+    right: -5px;
+    font-size: x-small;
+    background-color: #b3b3b3c2;
+    border-radius: 5px;
+    cursor: pointer;
+    color: black;
+    font-weight: bold;
 }
 
 .searchListCreatureContainer {
@@ -1251,6 +1293,7 @@ input {
     }
 }
 
+
 .editHpGrow {
     animation: editHpGrow 0.25s ease-out forwards;
 }
@@ -1293,6 +1336,17 @@ input {
     align-items: center
 }
 
+.effectContainerFlag {
+    position: absolute;
+    transform: rotate(45deg);
+    top: calc(0% - 6.5px);
+    right:  calc(28%);
+    background-color: inherit;
+    height: 9px;
+    width: 9px;
+    border-top: inherit;
+    border-left: inherit;
+}
 
 .infoContainerFlag {
     position: absolute;
@@ -1602,21 +1656,25 @@ input {
 
 .flagpole-container {
     position: relative;
-    left: 2%;
     background-color: white;
     border-radius: 10px;
     overflow: hidden;
+    width: 80%;
+    height: 70%;
+}
 
+.listItemOptionsBottom {
+    display: flex;
+    width: 150%;
 }
   
 .flagpole {
     position: relative;
-    left: 10%;
-    top: 3px;
+    left: 6%;
+    top: 2px;
     width: 1px; 
     height: 15px;
     background-color: rgb(241, 236, 79);
-    position: relative;
     border: solid 2px rgb(92, 92, 92);
     border-top-right-radius: 2px;
     border-top-left-radius: 2px;
@@ -1626,7 +1684,7 @@ input {
   
 .flag {
     position: relative;
-    width: 10px; 
+    width: 9px; 
     height: 8px; 
     left: 1px;
     border: solid 1px rgb(92, 92, 92);
