--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -90,23 +90,6 @@ hr {
                1px  1px 0 #000; 
 }
 
-.dndBackground {
-    overflow: hidden;
-    position: relative;
-    background-color: #000000;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    width: 100%;
-    height: 100vh; 
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    justify-content: center; 
-    align-items: center; 
-    z-index: -2;
-}
-
 .videoBackground {
     border: none; 
     position: absolute;
@@ -146,6 +129,27 @@ hr {
     text-align: center;
     cursor: pointer;
     background-color: #949e9bac;
+}
+
+.chosenCard {
+    position: absolute;
+    top: 5%;
+    left: 5%;
+    width: 90%;
+    border: 2px solid #ffffff;
+    background-color: #949e9bac;
+}
+
+.chosenHpContainer {
+    position: relative;
+    text-align: center;
+}
+
+.chosenHp {
+    color: rgb(62, 172, 74);
+    font-weight: bold;
+    width: 100%;
+    height: 100%;
 }
 
 .name {
@@ -485,7 +489,7 @@ hr {
     width: 20px;
 }
 
-.dmView {
+.background {
     display: flex;
     justify-content: space-between;
     font-family: 'Bitter', serif;
@@ -494,35 +498,47 @@ hr {
     background-size: cover;
     background-position: center; 
     background-repeat: no-repeat; 
-    /* overflow: hidden;
-    position: relative;
-    background-color: #000000;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    width: 100%;
-    height: 100vh; 
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    justify-content: center; 
-    align-items: center;  */
 }
 
-.dndBackground {
+.playerViewAdds {
     overflow: hidden;
     position: relative;
-    background-color: #000000;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
     width: 100%;
-    height: 100vh; 
     font-family: Arial, sans-serif;
     font-size: 16px;
     font-weight: bold;
     justify-content: center; 
     align-items: center; 
+}
+
+.joinGivenName {
+    position: absolute;
+    right: 15px;
+    top: 5px;
+    background: white;
+}
+
+.whoAreYouContainer {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center
+}
+
+.joinMessageTitle {
+    position: absolute;
+    top: 10%;
+    background: white;
+}
+
+.joinMessageList {
+    position: absolute;
+    left: 2px;
+    bottom: 2px;
+}
+
+.joinMessageListItem {
+    background-color: white;
 }
 
 .firstLoadMenuContainer {
@@ -588,6 +604,8 @@ hr {
     border-radius: 10px;
     margin: 10px;
     box-sizing: border-box; /* Include border and padding in the element's total width and height */
+    /* transition: width .5s ease;
+    animation: editHpGrow 0.25s ease-out forwards; */
 }
 
 .column.expand {
