css changes, new encounter socket changes to avoid creating empty encounters, changes to backend

--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -1481,10 +1481,12 @@ input {
 }
 
 .healButton {
+    color: white;
     background-color: rgb(102, 174, 102);
 }
 
 .damageButton {
+    color: white;
     background-color: rgb(174, 102, 102);
 }
 
