--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -119,16 +119,18 @@ hr {
 .card {
     position: relative;
     border: 2px solid #ffffff;
-    border-top-left-radius: 60px;
-    border-top-right-radius: 60px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-radius: 60px 60px 10px 10px;
     width: 200px;
     min-height: 240px;
     max-height: 290px;
     text-align: center;
-    cursor: pointer;
     background-color: #949e9bac;
+}
+
+.cardTurnHighlight {
+    position: relative;
+    border-radius: inherit;
+    min-height: 240px;
 }
 
 .chosenCard {
@@ -170,7 +172,8 @@ hr {
     flex-direction: column; 
     bottom: -.01%;
     background-color: #f0f0f0;
-    border: 0.5px solid #3d3d3d;
+    border-top: 1px solid #3d3d3d;
+    border-right: 1px solid #3d3d3d;
     height: 10%;
     min-width: 12%;
 }
@@ -179,6 +182,8 @@ hr {
     right: 0px;
     border-top-left-radius: 8px;
     border-bottom-right-radius: 8px;
+    border-left: 1px solid #3d3d3d;
+    border-right: none;
 }
 
 .hp-box {
@@ -192,6 +197,17 @@ hr {
 
 .tempHp {
     color: rgb(97, 191, 191);
+}
+
+.newTabLink {
+    margin-left: 10px;
+    border: 2px solid #00ffff00;
+    border-radius: 10px;
+
+}
+
+.newTabLink:hover {
+    border: 2px solid #ff0000;
 }
 
 @keyframes shadowPulse {
@@ -212,7 +228,14 @@ hr {
     }
 }
 
-
+@keyframes playerViewIconShadowPulse {
+    0%, 100% {
+      box-shadow:  inset 0px -30px 30px -10px rgb(0, 255, 255);
+    }
+    45%, 55% {
+      box-shadow:  inset 0px -40px 30px 20px rgb(0, 255, 255);
+    }
+}
 
 .options-container {
     display: flex;
@@ -739,6 +762,48 @@ hr {
     transform: translateY(200%);
 }
   
+@keyframes imageDrop {
+    0% {
+        
+        transform: scale(1.5) rotate(5deg);
+        opacity: 0;
+    }
+    40% {
+        transform: scale(1) rotate(-5deg);
+    }
+    55% {
+        transform: scale(1.1);
+    }
+
+    60% {
+        transform: rotate(3deg);
+    }
+
+    60%, 100% {
+        transform: scale(1) rotate(0deg);
+        opacity: 1;
+    }
+}
+
+@keyframes imageGrow {
+    0% {
+        transform: scale(.3);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.growImage {
+    animation: imageGrow .2s ease-in forwards;
+}
+
+.iconImageDrop {
+    animation: imageDrop .8s ease-in forwards;
+}
+
 .animated-label {
     display: inline-block; /* Ensure the label scales correctly */
     animation: grow 0.3s ease-in-out forwards;
@@ -902,7 +967,6 @@ input {
     align-items: center; /* Center vertically */
     background-color: #ffffff00;
     width: 100%;
-
 }
 
 .topInfo {
@@ -1107,16 +1171,15 @@ input {
 /* Dropdown menu items */
 .dropdown-item {
     display: flex;
-    padding: 10px 20px;
+    padding: 10px 2px;
     cursor: pointer;
     border-bottom: 1px dotted #ccc;
     justify-content: space-between;
 }
 
-.dropdownMenu li:hover {
-    background-color: #f1f1f1;
+.dropdown-item:hover {
+    background-color: #d9d9d9;
 }
-
 
 .encounterDropdownX {
     opacity: 1;
