--- a/src/projects/dnd/dmView/style/App.css
+++ b/src/projects/dnd/dmView/style/App.css
@@ -1036,6 +1036,7 @@ input {
     margin: 3px;
 }
 
+.statBlock:hover .statblockEdit,
 .statBlock:hover .statblockX {
     visibility: visible;
 }
@@ -1086,14 +1087,55 @@ input {
     border: 2px solid red;
 }
 
-.statblockX {
-    position: absolute;
+.statblockOptionsFlex {
+    display: flex;
+    justify-content: flex-end;
     right: 20px;
     top: 20px;
+    position: absolute;
+    height: 30px;
+}
+
+.statblockEdit,
+.statblockX {
     background-color: rgb(186, 186, 186);
     cursor: pointer;
-    visibility: hidden;
+    visibility: visible;
     z-index: 1;
+    margin: 3px
+}
+
+.editBlock {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 4px;
+}
+
+.editBlockTitle {
+    padding-right: 5px;
+    font-weight: bold;
+}
+
+.editBlockInput {
+    width: fit-content;
+    font-family: 'Bitter', serif;
+    font-size: 1em;
+    background-color: #ffffff6d;
+    border: none;
+    margin: 0;
+    border-bottom: 3px dotted #919191;
+    border-radius: 5px;
+}
+
+.editBlockBigInput {
+    width: 100%;
+    font-family: 'Bitter', serif;
+    font-size: 1em;
+    background-color: #ffffff6d;
+    border: none;
+    margin: 0px 0px 10px 0px;
+    border-bottom: 3px dotted #919191;
+    border-radius: 5px;
 }
 
 .lineSeperator {
@@ -1102,6 +1144,13 @@ input {
     border-top: 2px solid #822000; /* Change color and thickness */
     width: 100%; /* Set the width to 50% of the parent container */
     margin: 0px;
+}
+
+.editlineSeperator {
+    position: relative;
+    border: none; /* Remove default styling */
+    border-top: 2px solid #822000; /* Change color and thickness */
+    width: 100%; /* Set the width to 50% of the parent container */
 }
 
 
@@ -1113,7 +1162,6 @@ input {
     color: #822000;
 }
 
-
 .infoTitle {
     position: relative;
     margin-left: 0px;
@@ -1121,17 +1169,10 @@ input {
     top: 5px;
 }
 
-.topCard {
-    position: relative;
-    align-items: center; /* Center vertically */
-    background-color: #ffffff00;
-    width: 100%;
-}
 
 .topInfo {
     position: relative;
-    height: 100%;
-    background-color: #f8f2d3;
+    background-color: #e0dab8;
     border-radius: 8px;
 }
 
@@ -1221,8 +1262,6 @@ input {
 .shadowBox {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); /* Bottom shadow */
 }
-
-
 
 
   /* Style the scrollbar track */
@@ -1491,7 +1530,6 @@ input {
     margin: 0 0 4px 0;
     border-bottom: 2px dotted #919191;
     border-radius: 5px;
-
 }
 
 .titleInput {
@@ -1515,6 +1553,20 @@ input {
     border-right: 1px solid #919191;
     border-top: 1px solid #919191;
     border-radius: 5px;
+}
+
+.statBlockSkillsInput {
+    position: relative;
+    min-width: 20px;
+    max-width: 25px;
+    text-align: center;
+    margin: 0 2px 0 0;
+    font-family: 'Bitter', serif;
+    font-weight: bold;
+    font-size: 1em;
+    background-color: inherit;
+    color: inherit;
+    border: none;
 }
 
 .initiativeInputContainer {
@@ -1752,18 +1804,14 @@ input {
 
 .editStatsInputExtra,
 .editStatsInput {
-    border: 0px solid #ae2626;
+    border: 0;
     border-radius: 5px;
     width: 100%;
     height: 30%;
-    margin-top: 5%;
-    margin-bottom: 5%;
+    margin: 5% 0 5% 0;
     box-sizing: border-box;
     font-size: large;
-    padding-left: 18%; 
     text-align: center;
-    text-decoration: underline; 
-    background-color: rgb(255, 255, 255);
 }
 
 .editStatsInputExtra {
@@ -1991,4 +2039,10 @@ input {
     100% {
         transform: translate3d(0, 0, 0) rotate(0deg);
     }
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none; 
+    margin: 0;
 }
